# tfaip

./: README.md  devel_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
test/trainer/: test_optimizers.py
test/util/: test_profiling.py
tfaip/predict/: predictorbase.py
tfaip/scripts/xlsxexperimenter/: run_xlsx_experimenter.py
tfaip/trainer/: trainer.py
tfaip/trainer/callbacks/: swap_ema_weights.py
tfaip/trainer/optimizer/: gradient_accumulation_optimizer.py  optimizers.py
