[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.coverage.run]
#branch = true
source = ["tfaip"]
omit = ["test/*", "examples/*", "/tmp/*autograph*"]
disable_warnings = ["couldnt-parse"]
command_line = "-m pytest --cov --cov-report xml --cov-report html --cov-report term-missing"

[tool.coverage.report]
omit = ["test/*", "examples/*", "/tmp/*autograph*"]

[tool.pytest.ini_options]
addopts = "--isolate --isolate-timeout 120"
testpaths = ["test"]
