[metadata]
version = attr: tfaip.version.__version__
description = Python-based research framework for developing, organizing, and deploying Deep Learning models powered by Tensorflow.
long_description = file: README.md
long_description_content_type = text/markdown
licence_file = LICENSE
project_urls =
    homepage = "https://github.com/bertsky/tfaip"
    upstream = "https://github.com/Planet-AI-GmbH/tfaip"
    download_url = "https://pypi.org/project/ocrd-fork-tfaip/"

[options]
packages = find:
install_requires = file: requirements.txt

[options.extras_require]
devel = file: devel_requirements.txt

[options.packages.find]
where = .
include = tfaip*


